--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "0.1.0",
   "private": false,
   "homepage": "https://zachrussell12.github.io/portfolio",
+  "proxy": "https://fj9qgaqsh3.execute-api.us-east-1.amazonaws.com/dev/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.1.2",
     "framer-motion": "^6.3.10",
     "gh-pages": "^4.0.0",
     "react": "^18.1.0",
@@ -15,7 +17,9 @@
     "react-intersection-observer": "^9.2.2",
     "react-responsive": "^9.0.0-beta.10",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
+    "react-type-animation": "^2.1.1",
+    "typewriter-effect": "^2.19.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -24,7 +28,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-		"deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
